ACTIN-301: address code-review feedback